Try MultiTarget Burst, doesn't work yet.

--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -1,5 +1,7 @@
 [SmallUnitTactics.SmallUnitTactics_WeaponManager]
 
 +arrWeaponProfiles=( \\
-	WeaponName="AssaultRifle_CV" \\
+	WeaponName="AssaultRifle_CV", \\
+	Burst=(ShotCount=5), \\
+	Automatic=(ShotCount=10) \\
 )
