Listener setup for Highlander event overrides.

--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -2,6 +2,13 @@
 
 +arrWeaponProfiles=( \\
 	WeaponName="AssaultRifle_CV", \\
+	BulletProfile=( \\
+		Damage=2, Spread=2, PlusOne=0, \\
+		Crit=2, Pierce=0, Shred=0, Tag="", \\
+		DamageType="Projectile_Conventional" \\
+	), \\
+	Aimed=(ShotCount=1), \\
+	Snap=(ShotCount=1), \\
 	Burst=(ShotCount=5), \\
 	Automatic=(ShotCount=10) \\
 )
