--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -2,8 +2,9 @@
 
 +arrWeaponProfiles=( \\
 	WeaponName="AssaultRifle_CV", \\
+	iClipSize=20, \\
 	BulletProfile=( \\
-		Damage=2, Spread=2, PlusOne=0, \\
+		Damage=2, Spread=1, PlusOne=0, \\
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
