--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -8,8 +8,11 @@
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	Aimed=(ShotCount=1), \\
-	Snap=(ShotCount=1), \\
-	Burst=(ShotCount=5), \\
-	Automatic=(ShotCount=10) \\
+	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
+	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
+	Burst=(ShotCount=5, SuppressionPenalty=-15), \\
+	Automatic=(ShotCount=10, SuppressionPenalty=-40) \\
 )
+
+[SmallUnitTactics.SmallUnitTactics_CharacterManager]
+BaseHPMultiplier=3
