Add localisation tag for showing suppression penalty. Allow enemies to use fire modes.

--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -14,5 +14,49 @@
 	Automatic=(ShotCount=10, SuppressionPenalty=-40) \\
 )
 
+
+; Enemy Weapons
++arrWeaponProfiles=( \\
+	WeaponName="AdvTrooperM1_WPN", \\
+	iClipSize=20, \\
+	BulletProfile=( \\
+		Damage=2, Spread=1, PlusOne=0, \\
+		Crit=2, Pierce=2, Shred=0, Tag="", \\
+		DamageType="Projectile_MagAdvent" \\
+	), \\
+	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
+	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
+	Burst=(ShotCount=5, SuppressionPenalty=-15), \\
+	Automatic=(ShotCount=10, SuppressionPenalty=-40) \\
+)
+
++arrWeaponProfiles=( \\
+	WeaponName="AdvCaptainM1_WPN", \\
+	iClipSize=20, \\
+	BulletProfile=( \\
+		Damage=2, Spread=1, PlusOne=0, \\
+		Crit=2, Pierce=2, Shred=0, Tag="", \\
+		DamageType="Projectile_MagAdvent" \\
+	), \\
+	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
+	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
+	Burst=(ShotCount=5, SuppressionPenalty=-15), \\
+	Automatic=(ShotCount=10, SuppressionPenalty=-40) \\
+)
+
++arrWeaponProfiles=( \\
+	WeaponName="AdvCaptainM2_WPN", \\
+	iClipSize=20, \\
+	BulletProfile=( \\
+		Damage=2, Spread=1, PlusOne=0, \\
+		Crit=2, Pierce=2, Shred=0, Tag="", \\
+		DamageType="Projectile_MagAdvent" \\
+	), \\
+	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
+	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
+	Burst=(ShotCount=5, SuppressionPenalty=-15), \\
+	Automatic=(ShotCount=10, SuppressionPenalty=-40) \\
+)
+
 [SmallUnitTactics.SmallUnitTactics_CharacterManager]
 BaseHPMultiplier=3
