--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -8,10 +8,10 @@
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
-	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
-	Burst=(ShotCount=5, SuppressionPenalty=-15), \\
-	Automatic=(ShotCount=10, SuppressionPenalty=-40) \\
+	Aimed=(ShotCount=1, SuppressionPenalty=-5, AimModifier=20, CritModifier=35), \\
+	Snap=(ShotCount=1, SuppressionPenalty=-10, AimModifier=5, CritModifier=10), \\
+	Burst=(ShotCount=5, SuppressionPenalty=-15, AimModifier=-15), \\
+	Automatic=(ShotCount=10, SuppressionPenalty=-40, AimModifier=-40, CritModifier=-15) \\
 )
 
 
