Add activate all pods and configurable sight radius boost.

--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -60,3 +60,7 @@
 
 [SmallUnitTactics.SmallUnitTactics_CharacterManager]
 BaseHPMultiplier=3
+
+
+[SmallUnitTactics.SmallUnitTactics_X2Ability_Survey]
+SurveySightRadiusBoost=40
