--- a/SmallUnitTactics/Config/XComAI.ini
+++ b/SmallUnitTactics/Config/XComAI.ini
@@ -1,16 +1,13 @@
 [XComGame.X2AIBTBehaviorTree]
 
--EquivalentAbilities=( KeyName=StandardShot, EquivalentAbilityName[0]=PistolStandardShot, EquivalentAbilityName[1]=AnimaGate, EquivalentAbilityName[2]=BlasterDuringCannon, EquivalentAbilityName[3]=StandardShot_NoEnd, EquivalentAbilityName[4]=Blaster)
+; it is safe to not remove the vanilla list
+; all lists are scanned until an available equivalent ability is found
+; only reason for removal would be reordering
 +EquivalentAbilities=( \\
 	KeyName=StandardShot, \\
-	EquivalentAbilityName[0]=PistolStandardShot, \\
-	EquivalentAbilityName[1]=AnimaGate, \\
-	EquivalentAbilityName[2]=BlasterDuringCannon, \\
-	EquivalentAbilityName[3]=StandardShot_NoEnd, \\
-	EquivalentAbilityName[4]=Blaster, \\
-	EquivalentAbilityName[5]=SUT_AimedShot, \\
-	EquivalentAbilityName[6]=SUT_SnapShot, \\
-	EquivalentAbilityName[7]=SUT_BurstShot \\
+	EquivalentAbilityName[0]=SUT_AimedShot, \\
+	EquivalentAbilityName[1]=SUT_SnapShot, \\
+	EquivalentAbilityName[2]=SUT_BurstShot \\
 )
 
 +EquivalentAbilities=( \\
