Exploring prime and throw grenades. WIP.

--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -1,5 +1,11 @@
 [SmallUnitTactics.SmallUnitTactics_WeaponManager]
 
+
++arrTimedGrenades="FragGrenade"
++arrTimedGrenades="FlashbangGrenade"
+
+
+
 +arrWeaponProfiles=( \\
 	WeaponName="AssaultRifle_CV", \\
 	iClipSize=20, \\
@@ -64,3 +70,9 @@ BaseHPMultiplier=3
 
 [SmallUnitTactics.SmallUnitTactics_X2Ability_Survey]
 SurveySightRadiusBoost=40
+
+[SmallUnitTactics.SmallUnitTactics_Effect_TickingGrenade]
+PersistentParticles=FX_WP_ProximityMine.P_ProximityMine_Armed
+
+[SmallUnitTactics.SmallUnitTactics_X2Ability_Grenades]
+DetonateGrenadeExplosion=FX_Explosion_Proximity_Mine.P_Proximity_Mine_Explosion
