Added weapon conditional graze modifier for Weapons. Started tuning Grenade damage values.

--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -14,6 +14,7 @@
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
+	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
 	Aimed=(ShotCount=1, SuppressionPenalty=-5, AimModifier=20, CritModifier=35), \\
 	Snap=(ShotCount=1, SuppressionPenalty=-10, AimModifier=5, CritModifier=10), \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15, AimModifier=-15), \\
