Bring in ConstantCombat from robojumper for ambient suppression to be visualised as additional gunfire.

--- a/SmallUnitTactics/Config/XComEngine.ini
+++ b/SmallUnitTactics/Config/XComEngine.ini
@@ -1,3 +1,6 @@
 [Engine.ScriptPackages]
 +NonNativePackages=SmallUnitTactics
 -NonNativePackages=XComMissionLogic
+
+[Engine.Engine]
++ModClassOverrides=(BaseGameClass="XComIdleAnimationStateMachine", ModClass="SmallUnitTactics.SmallUnitTactics_IdleAnimationStateMachine")
