Begin play test pass of conventional weaponry. Add Binoculars for greater survey range.

--- a/SmallUnitTactics/Config/XComGameData_WeaponData.ini
+++ b/SmallUnitTactics/Config/XComGameData_WeaponData.ini
@@ -28,3 +28,9 @@ SmokeGrenadeMk2_Radius = 12
 GasGrenade_Radius = 8
 
 GasBomb_Radius = 9
+
+[XComGame.X2Item_DefaultWeapons]
+ASSAULTRIFLE_CONVENTIONAL_IENVIRONMENTDAMAGE=1
+SNIPERRIFLE_CONVENTIONAL_IENVIRONMENTDAMAGE=5
+LMG_CONVENTIONAL_IENVIRONMENTDAMAGE=2
+SHOTGUN_CONVENTIONAL_IENVIRONMENTDAMAGE=8
