--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -1,24 +1,66 @@
 [SmallUnitTactics.SmallUnitTactics_WeaponManager]
 
-
 +arrTimedGrenades="FragGrenade"
 +arrTimedGrenades="FlashbangGrenade"
++arrTimedGrenades="SmokeGrenade"
 
 
 
 +arrWeaponProfiles=( \\
 	WeaponName="AssaultRifle_CV", \\
-	iClipSize=20, \\
+	iClipSize=15, \\
 	BulletProfile=( \\
-		Damage=2, Spread=1, PlusOne=0, \\
+		Damage=5, Spread=2, PlusOne=0, \\
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
+	DefaultGrazeModifier=(High=30, Low=15, Flanked=0, Open=0), \\
 	Aimed=(ShotCount=1, SuppressionPenalty=-5, AimModifier=20, CritModifier=35), \\
 	Snap=(ShotCount=1, SuppressionPenalty=-10, AimModifier=5, CritModifier=10), \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15, AimModifier=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40, AimModifier=-40, CritModifier=-15) \\
+)
+
+
++arrWeaponProfiles=( \\
+	WeaponName="Shotgun_CV", \\
+	iClipSize=5, \\
+	BulletProfile=( \\
+		Damage=10, Spread=3, PlusOne=0, \\
+		Crit=8, Pierce=0, Shred=0, Tag="", \\
+		DamageType="Projectile_Conventional" \\
+	), \\
+	DefaultGrazeModifier=(High=30, Low=15, Flanked=0, Open=0), \\
+	Aimed=(ShotCount=1, SuppressionPenalty=0, AimModifier=30, CritModifier=35), \\
+	Snap=(ShotCount=1, SuppressionPenalty=0, AimModifier=10, CritModifier=10), \\
+)
+
+
++arrWeaponProfiles=( \\
+	WeaponName="SniperRifle_CV", \\
+	iClipSize=5, \\
+	BulletProfile=( \\
+		Damage=10, Spread=3, PlusOne=0, \\
+		Crit=8, Pierce=0, Shred=0, Tag="", \\
+		DamageType="Projectile_Conventional" \\
+	), \\
+	DefaultGrazeModifier=(High=10, Low=5, Flanked=0, Open=0), \\
+	Aimed=(ShotCount=1, SuppressionPenalty=0, AimModifier=20, CritModifier=35), \\
+	Snap=(ShotCount=1, SuppressionPenalty=0, AimModifier=0, CritModifier=10), \\
+)
+
+
++arrWeaponProfiles=( \\
+	WeaponName="Cannon_CV", \\
+	iClipSize=40, \\
+	BulletProfile=( \\
+		Damage=3, Spread=1, PlusOne=0, \\
+		Crit=3, Pierce=0, Shred=0, Tag="", \\
+		DamageType="Projectile_Conventional" \\
+	), \\
+	DefaultGrazeModifier=(High=60, Low=40, Flanked=20, Open=20), \\
+	Burst=(ShotCount=10, SuppressionPenalty=-30, AimModifier=-15), \\
+	Automatic=(ShotCount=20, SuppressionPenalty=-60, AimModifier=-30, CritModifier=-15) \\
 )
 
 
@@ -31,8 +73,6 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
-	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
-	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -45,8 +85,6 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
-	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
-	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -59,8 +97,6 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
-	Aimed=(ShotCount=1, SuppressionPenalty=-5), \\
-	Snap=(ShotCount=1, SuppressionPenalty=-10), \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -68,9 +104,13 @@
 [SmallUnitTactics.SmallUnitTactics_CharacterManager]
 BaseHPMultiplier=3
 
+[SmallUnitTactics.SmallUnitTactics_X2Item_Binoculars]
+BinocularsSupplyCost=20
+BinocularsBlackMarketCost=8
 
 [SmallUnitTactics.SmallUnitTactics_X2Ability_Survey]
-SurveySightRadiusBoost=40
+SurveySightRadiusBoost=20
+SurveyBinocularsSightRadiusBoost=40
 
 [SmallUnitTactics.SmallUnitTactics_Effect_TickingGrenade]
 PersistentParticles=FX_WP_ProximityMine.P_ProximityMine_Armed
