--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -14,6 +14,7 @@
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Burst, \\
 	DefaultGrazeModifier=(High=30, Low=15, Flanked=0, Open=0), \\
 	Aimed=(ShotCount=1, SuppressionPenalty=-5, AimModifier=20, CritModifier=35), \\
 	Snap=(ShotCount=1, SuppressionPenalty=-10, AimModifier=5, CritModifier=10), \\
@@ -30,6 +31,7 @@
 		Crit=8, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Snap, \\
 	DefaultGrazeModifier=(High=30, Low=15, Flanked=0, Open=0), \\
 	Aimed=(ShotCount=1, SuppressionPenalty=0, AimModifier=30, CritModifier=35), \\
 	Snap=(ShotCount=1, SuppressionPenalty=0, AimModifier=10, CritModifier=10), \\
@@ -44,6 +46,7 @@
 		Crit=8, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Snap, \\
 	DefaultGrazeModifier=(High=10, Low=5, Flanked=0, Open=0), \\
 	Aimed=(ShotCount=1, SuppressionPenalty=0, AimModifier=20, CritModifier=35), \\
 	Snap=(ShotCount=1, SuppressionPenalty=0, AimModifier=0, CritModifier=10), \\
@@ -58,6 +61,7 @@
 		Crit=3, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Burst, \\
 	DefaultGrazeModifier=(High=60, Low=40, Flanked=20, Open=20), \\
 	Burst=(ShotCount=10, SuppressionPenalty=-30, AimModifier=-15), \\
 	Automatic=(ShotCount=20, SuppressionPenalty=-60, AimModifier=-30, CritModifier=-15) \\
@@ -73,6 +77,7 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Burst, \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -85,6 +90,7 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Burst, \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -97,6 +103,7 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
+	OverwatchFireMode=eSUTFireMode_Burst, \\
 	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
