Remove burst shot in favor of aimed burst (using follow shots). Add ArmorProfiles.

--- a/SmallUnitTactics/Config/XComGameCore.ini
+++ b/SmallUnitTactics/Config/XComGameCore.ini
@@ -3,3 +3,61 @@ LOW_COVER_BONUS=35
 HIGH_COVER_BONUS=50
 REACTION_FINALMOD=0.1f
 REACTION_DASHING_FINALMOD=0.2f
+
+[XComGame.X2Ability_ItemGrantedAbilitySet]
+; NANOFIBER_VEST_HP_BONUS=1
+PLATED_VEST_HP_BONUS=2
+; PLATED_VEST_MITIGATION_CHANCE=100
+; PLATED_VEST_MITIGATION_AMOUNT=1
+; HAZMAT_VEST_HP_BONUS=2
+; STASIS_VEST_HP_BONUS=2
+; STASIS_VEST_REGEN_AMOUNT=2
+; STASIS_VEST_MAX_REGEN_AMOUNT=8
+; MEDIUM_PLATED_HEALTH_BONUS=4
+; HEAVY_PLATED_HEALTH_BONUS=5
+; HEAVY_PLATED_MITIGATION_CHANCE=100
+; HEAVY_PLATED_MITIGATION_AMOUNT=1
+; LIGHT_PLATED_HEALTH_BONUS=4
+; LIGHT_PLATED_MOBILITY_BONUS=1
+; LIGHT_PLATED_DODGE_BONUS=20
+; MEDIUM_POWERED_HEALTH_BONUS=6
+; MEDIUM_POWERED_MITIGATION_AMOUNT=1
+; MEDIUM_POWERED_MITIGATION_CHANCE=100
+; HEAVY_POWERED_HEALTH_BONUS=6
+; HEAVY_POWERED_MITIGATION_AMOUNT=2
+; HEAVY_POWERED_MITIGATION_CHANCE=100
+; LIGHT_POWERED_HEALTH_BONUS=6
+; LIGHT_POWERED_MOBILITY_BONUS=2
+; LIGHT_POWERED_DODGE_BONUS=25
+; PSIAMP_CV_STATBONUS=0
+; PSIAMP_MG_STATBONUS=20
+; PSIAMP_BM_STATBONUS=40
+; COMBAT_STIM_MOBILITY_MOD=1.5f
+; COMBAT_STIM_DURATION=2
+; APROUNDS_PIERCE=5
+; APROUNDS_CRITCHANCE=0
+; APROUNDS_CRIT=0
+; STILETTOROUNDS_PIERCE=4
+; STILETTOROUNDS_CRITCHANCE=0
+; STILETTOROUNDS_CRIT=0
+; TALON_AIM=0
+; TALON_CRIT=1
+; TALON_CRITCHANCE=20
+; FALCON_AIM=-5
+; FALCON_CRIT=3
+; FALCON_CRITCHANCE=10
+; AMPBOOSTER_PSIOFFENSE=2
+; NEUROWHIP_PSIOFFENSE=4
+; DAMPING_WILL=2
+; MINDSHIELD_WILL=0
+; SCORCHCIRCUITS_HEALTH_BONUS=2
+; SCORCHCIRCUITS_APPLY_CHANCE=100
+; BATTLESCANNER_DURATION=4
+; MIMIC_BEACON_START_ANIM=LL_MimicStart
+; WALL_PHASING_DURATION=2
+; WALL_PHASING_CHARGES=2
+
+[SmallUnitTactics.SmallUnitTactics_X2Ability_ItemGrantedAbilitySet]
+KEVLAR_HEALTH_BONUS=0
+KEVLAR_MITIGATION_CHANCE=100
+KEVLAR_MITIGATION_AMOUNT=1
