--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -5,6 +5,15 @@
 +arrTimedGrenades="SmokeGrenade"
 
 
++arrArmorProfiles=( \\
+	ArmorName="KevlarArmor", \\
+	ArmorAbilityName="KevlarArmorStats", \\
+	HP=0, \\
+	ArmorChance=100, \\
+	ArmorMitigation=2 \\
+)
+
+
 
 +arrWeaponProfiles=( \\
 	WeaponName="AssaultRifle_CV", \\
@@ -14,12 +23,11 @@
 		Crit=2, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Burst, \\
-	DefaultGrazeModifier=(High=30, Low=15, Flanked=0, Open=0), \\
-	Aimed=(ShotCount=1, SuppressionPenalty=-5, AimModifier=20, CritModifier=35), \\
-	Snap=(ShotCount=1, SuppressionPenalty=-10, AimModifier=5, CritModifier=10), \\
-	Burst=(ShotCount=3, SuppressionPenalty=-15, AimModifier=-15), \\
-	Automatic=(ShotCount=5, SuppressionPenalty=-40, AimModifier=-40, CritModifier=-15) \\
+	OverwatchAimModifier=10, \\
+	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
+	Aimed=(ShotCount=3, SuppressionPenalty=-15, AimModifier=20, CritModifier=35), \\
+	Snap=(ShotCount=3, SuppressionPenalty=-15, AimModifier=-15), \\
+	Automatic=(ShotCount=9, SuppressionPenalty=-40, AimModifier=-40, CritModifier=-15) \\
 )
 
 
@@ -31,10 +39,10 @@
 		Crit=8, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Snap, \\
-	DefaultGrazeModifier=(High=30, Low=15, Flanked=0, Open=0), \\
-	Aimed=(ShotCount=1, SuppressionPenalty=0, AimModifier=30, CritModifier=35), \\
-	Snap=(ShotCount=1, SuppressionPenalty=0, AimModifier=10, CritModifier=10), \\
+	OverwatchAimModifier=20, \\
+	DefaultGrazeModifier=(High=40, Low=20, Flanked=0, Open=0), \\
+	Aimed=(ShotCount=1, SuppressionPenalty=-5, AimModifier=30, CritModifier=35), \\
+	Snap=(ShotCount=1, SuppressionPenalty=-5, AimModifier=10, CritModifier=10), \\
 )
 
 
@@ -46,7 +54,7 @@
 		Crit=8, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Snap, \\
+	OverwatchAimModifier=-10, \\
 	DefaultGrazeModifier=(High=10, Low=5, Flanked=0, Open=0), \\
 	Aimed=(ShotCount=1, SuppressionPenalty=0, AimModifier=20, CritModifier=35), \\
 	Snap=(ShotCount=1, SuppressionPenalty=0, AimModifier=0, CritModifier=10), \\
@@ -61,9 +69,9 @@
 		Crit=3, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Burst, \\
-	DefaultGrazeModifier=(High=60, Low=40, Flanked=20, Open=20), \\
-	Burst=(ShotCount=10, SuppressionPenalty=-30, AimModifier=-15), \\
+	OverwatchAimModifier=-5, \\
+	DefaultGrazeModifier=(High=80, Low=40, Flanked=20, Open=20), \\
+	Snap=(ShotCount=10, SuppressionPenalty=-30, AimModifier=-15), \\
 	Automatic=(ShotCount=20, SuppressionPenalty=-60, AimModifier=-30, CritModifier=-15) \\
 )
 
@@ -77,8 +85,8 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Burst, \\
-	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
+	OverwatchAimModifier=10, \\
+	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
 
@@ -90,8 +98,8 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Burst, \\
-	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
+	OverwatchAimModifier=10, \\
+	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
 
@@ -103,8 +111,8 @@
 		Crit=2, Pierce=2, Shred=0, Tag="", \\
 		DamageType="Projectile_MagAdvent" \\
 	), \\
-	OverwatchFireMode=eSUTFireMode_Burst, \\
-	Burst=(ShotCount=3, SuppressionPenalty=-15), \\
+	OverwatchAimModifier=10, \\
+	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
 
