Small ini AI and Character Stat changes.

--- a/SmallUnitTactics/Config/XComAI.ini
+++ b/SmallUnitTactics/Config/XComAI.ini
@@ -20,3 +20,8 @@
 	KeyName=Suppression, \\
 	EquivalentAbilityName[0]=SUT_AutoShot \\
 )
+
++EquivalentAbilities=( \\
+	KeyName=Overwatch, \\
+	EquivalentAbilityName[0]=SUT_OverwatchSnapShot \\
+)
