Add some balancing and clean up config.

--- a/SmallUnitTactics/Config/XComAI.ini
+++ b/SmallUnitTactics/Config/XComAI.ini
@@ -23,5 +23,5 @@
 
 +EquivalentAbilities=( \\
 	KeyName=Overwatch, \\
-	EquivalentAbilityName[0]=SUT_OverwatchSnapShot \\
+	EquivalentAbilityName[0]=SUT_OverwatchSnap \\
 )
