--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -19,8 +19,8 @@
 	WeaponName="AssaultRifle_CV", \\
 	iClipSize=15, \\
 	BulletProfile=( \\
-		Damage=5, Spread=2, PlusOne=0, \\
-		Crit=2, Pierce=0, Shred=0, Tag="", \\
+		Damage=6, Spread=2, PlusOne=0, \\
+		Crit=3, Pierce=0, Shred=0, Tag="", \\
 		DamageType="Projectile_Conventional" \\
 	), \\
 	OverwatchAimModifier=10, \\
@@ -86,6 +86,7 @@
 		DamageType="Projectile_MagAdvent" \\
 	), \\
 	OverwatchAimModifier=10, \\
+	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
 	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -99,6 +100,7 @@
 		DamageType="Projectile_MagAdvent" \\
 	), \\
 	OverwatchAimModifier=10, \\
+	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
 	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
@@ -112,6 +114,7 @@
 		DamageType="Projectile_MagAdvent" \\
 	), \\
 	OverwatchAimModifier=10, \\
+	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
 	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
 	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
