--- a/SmallUnitTactics/Config/XComGameCore.ini
+++ b/SmallUnitTactics/Config/XComGameCore.ini
@@ -4,6 +4,12 @@ HIGH_COVER_BONUS=40
 REACTION_FINALMOD=0.1f
 REACTION_DASHING_FINALMOD=0.2f
 
+[XComGame.X2StatusEffects]
+MAX_PANICKING_UNITS=10
+PANIC_STRENGTH_TAKE_DAMAGE=2 ; from 10
+PANIC_STRENGTH_LOS_FRIENDLY_DEATH=2 ; from 10
+PANIC_STRENGTH_LOS_HIGHER_FRIENDLY_DEATH=25 ; vanilla amount
+
 [XComGame.X2Ability_ItemGrantedAbilitySet]
 ; NANOFIBER_VEST_HP_BONUS=1
 PLATED_VEST_HP_BONUS=2
