--- a/SmallUnitTactics/Config/XComGameData_CharacterStats.ini
+++ b/SmallUnitTactics/Config/XComGameData_CharacterStats.ini
@@ -1,7 +1,7 @@
-[AdvTrooperM1 X2CharacterTemplate]
+[AdvTrooper X2CharacterTemplate]
 CharacterBaseStats[eStat_ArmorChance]=100
 CharacterBaseStats[eStat_ArmorMitigation]=1
 
-[AdvCaptainM1 X2CharacterTemplate]
+[AdvCaptain X2CharacterTemplate]
 CharacterBaseStats[eStat_ArmorChance]=100
 CharacterBaseStats[eStat_ArmorMitigation]=1
