--- a/SmallUnitTactics/Config/XComSmallUnitTactics.ini
+++ b/SmallUnitTactics/Config/XComSmallUnitTactics.ini
@@ -25,6 +25,21 @@
 	Automatic=(ShotCount=9, SuppressionPenalty=-40, AimModifier=-40, CritModifier=-15) \\
 )
 
++arrWeaponProfiles=( \\
+	WeaponName="AssaultRifle_Advent", \\
+	iClipSize=15, \\
+	BulletProfile=( \\
+		Damage=5, Spread=2, PlusOne=0, \\
+		Crit=3, Pierce=2, Shred=0, Tag="", \\
+		DamageType="Projectile_Conventional" \\
+	), \\
+	OverwatchAimModifier=10, \\
+	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
+	Aimed=(ShotCount=3, SuppressionPenalty=-10, AimModifier=20, CritModifier=35), \\
+	Snap=(ShotCount=3, SuppressionPenalty=-10, AimModifier=-15), \\
+	Automatic=(ShotCount=9, SuppressionPenalty=-35, AimModifier=-40, CritModifier=-15) \\
+)
+
 
 +arrWeaponProfiles=( \\
 	WeaponName="Shotgun_CV", \\
@@ -68,50 +83,6 @@
 	DefaultGrazeModifier=(High=80, Low=40, Flanked=20, Open=20), \\
 	Snap=(ShotCount=10, SuppressionPenalty=-30, AimModifier=-15), \\
 	Automatic=(ShotCount=20, SuppressionPenalty=-60, AimModifier=-30, CritModifier=-15) \\
-)
-
-
-; Enemy Weapons
-+arrWeaponProfiles=( \\
-	WeaponName="AdvTrooperM1_WPN", \\
-	iClipSize=20, \\
-	BulletProfile=( \\
-		Damage=2, Spread=1, PlusOne=0, \\
-		Crit=2, Pierce=2, Shred=0, Tag="", \\
-		DamageType="Projectile_MagAdvent" \\
-	), \\
-	OverwatchAimModifier=10, \\
-	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
-	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
-	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
-)
-
-+arrWeaponProfiles=( \\
-	WeaponName="AdvCaptainM1_WPN", \\
-	iClipSize=20, \\
-	BulletProfile=( \\
-		Damage=2, Spread=1, PlusOne=0, \\
-		Crit=2, Pierce=2, Shred=0, Tag="", \\
-		DamageType="Projectile_MagAdvent" \\
-	), \\
-	OverwatchAimModifier=10, \\
-	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
-	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
-	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
-)
-
-+arrWeaponProfiles=( \\
-	WeaponName="AdvCaptainM2_WPN", \\
-	iClipSize=20, \\
-	BulletProfile=( \\
-		Damage=2, Spread=1, PlusOne=0, \\
-		Crit=2, Pierce=2, Shred=0, Tag="", \\
-		DamageType="Projectile_MagAdvent" \\
-	), \\
-	OverwatchAimModifier=10, \\
-	DefaultGrazeModifier=(High=60, Low=30, Flanked=0, Open=0), \\
-	Snap=(ShotCount=3, SuppressionPenalty=-15), \\
-	Automatic=(ShotCount=5, SuppressionPenalty=-40) \\
 )
 
 [SmallUnitTactics.SmallUnitTactics_CharacterManager]
